syntax = "proto3";

import 'google/protobuf/empty.proto';

service CounterService {
  rpc Increment(google.protobuf.Empty) returns (google.protobuf.Empty);
}
